# craft

./: analysis_options.yaml  build.yaml  flutter_rust_bridge.yaml  pubspec.yaml
android/app/: build.gradle
crates/models/: Cargo.toml
crates/models/src/: proto.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/app/: bloc_observer.dart
lib/app/model/: request_base.dart
lib/app/models/: json_serializeble.dart  packet_base.dart
lib/app/rust/: frb_generated.dart  frb_generated.io.dart  (+1 more)
lib/di/: injectable.config.dart  injectable.dart
lib/i18n/: strings_pt-BR.json  translations.g.dart
lib/responsive/: app_breakpoints.dart  breakpoint_container.dart  breakpoints.dart  responsive_row_column.dart
lib/routes/: router.dart  routes.dart  routes.g.dart
lib/theme/: theme.dart  theme_colors.dart  theme_data.dart
lib/utils/: language_settings.dart  settings_key.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/client/: communication.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_craft.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_craft.podspec
rust_builder/windows/: CMakeLists.txt
server/: Cargo.toml
server/src/: client.rs  error.rs  lib.rs  lobby.rs  main.rs  server.rs
web/: index.html
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
(+43 files in other folders)
