[package]
name = "rust_lib_craft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.4.0"
lazy_static = "1.5.0"
futures = "0.3.30"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["full"] }
tokio-tungstenite = "0.24.0"
log = "0.4.20"
