[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
warp = "0.3.7"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.5"
